{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "GamePlay",
            "id": "4a43ed41-c76e-45c7-a873-0f334e5728fb",
            "actions": [
                {
                    "name": "CardController",
                    "type": "Button",
                    "id": "a242e0b4-599c-4539-9295-f9870a135b0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8f55fd38-c954-4988-b962-b04089c6f035",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CardController",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}